[project]
name = "ComfyUI-ModelUtils"
description = "[WIP]Custom nodes for handling, inspecting, modifying and creating various model files."
version = "0.1.6"
license = { file = "LICENSE" }

[project.urls]
Repository = "https://github.com/silveroxides/ComfyUI-ModelUtils"
#  Used by Comfy Registry https://comfyregistry.org

[tool.comfy]
PublisherId = "silveroxides"
DisplayName = "Model Utility Toolkit"
Icon = "https://github.com/silveroxides/ComfyUI-ModelUtils/raw/refs/heads/main/assets/tools-icon.svg"
